--- a/WTS_Game/Views/GamePage.xaml
+++ b/WTS_Game/Views/GamePage.xaml
@@ -133,7 +133,8 @@
             <Button Grid.Row="1" Grid.Column="0" Content="Left" Margin="4" Tapped="LeftButton_Tapped" HorizontalAlignment="Center" IsEnabled="{x:Bind Path=ViewModel.IsGameOn,Mode=OneWay}"/>
             <Button Grid.Row="1" Grid.Column="2" Content="Right" Margin="4" Tapped="RightButton_Tapped" HorizontalAlignment="Center" IsEnabled="{x:Bind Path=ViewModel.IsGameOn,Mode=OneWay}"/>
             <Button Grid.Row="2" Grid.Column="1" Content="Down" Margin="4" Tapped="DownButton_Tapped" HorizontalAlignment="Center" IsEnabled="{x:Bind Path=ViewModel.IsGameOn,Mode=OneWay}"/>
-            <Button Grid.Row="1" Grid.Column="3" Content="Run" Margin="4" Tapped="RunButton_Tapped" HorizontalAlignment="Center" IsEnabled="{x:Bind Path=ViewModel.IsGameOn,Mode=OneWay}"/>
+            <Button Grid.Row="0" Grid.Column="3" Content="Undo" Margin="4" Tapped="UndoButton_Tapped" HorizontalAlignment="Center" IsEnabled="{x:Bind Path=ViewModel.IsUndoPossible,Mode=OneWay}"/>
+            <Button Grid.Row="1" Grid.Column="3" Content="Run" Margin="4" Tapped="RunButton_Tapped" HorizontalAlignment="Center" IsEnabled="{x:Bind Path=ViewModel.IsRunPossible,Mode=OneWay}"/>
         </Grid>
         <Grid Grid.Row="1" Grid.Column="1" Visibility="{x:Bind Path=ViewModel.AfterSimulationVisiblity,Mode=OneWay}">
             <Grid.ColumnDefinitions>
